<resources>
    <string name="app_name">NwRq</string>

    <string name="empty"> </string>
    <string name="request_methods">API Request Methods</string>

    <string name="url">URL</string>
    <string name="request_obj">Request Object</string>
    <string name="response">Response</string>

    <string name="get">GET</string>
    <string name="post">POST</string>
    <string name="put">PUT</string>
    <string name="patch">PATCH</string>
    <string name="delete">DELETE</string>

    <string name="post_form">POST type:Form</string>
    <string name="post_json">POST type:JSON</string>

    <string name="state_requesting">Requesting...</string>
    <string name="state_waiting_response">Awaiting response...</string>
    <string name="state_received_response">Response received.</string>
    <string name="state_parsing_response">Parsing response...</string>
    <string name="state_error">Error.</string>

    <string name="ok_http">OkHttp</string>
    <string name="http_url_connection">HttpURLConnection</string>
    <string name="volley">Volley</string>
    <string name="spring_rest_template">Spring Rest Template</string>
    <string name="retrofit">Retrofit</string>
    <string name="feign">Feign</string>
    <string name="apache_http_client">Apache HttpClient</string>
    <string name="ion">Ion</string>
    <string name="fuel">Fuel</string>
    <string name="loop_j">Loopj</string>

    <string name="about">About</string>
    <string name="about_title">NwRq</string>
    <string name="about_message">Licensed under MIT.\nSource code available <a href="https://github.com/Praseetha-KR/nwrq-a">here</a>.\n\n&#169; 2019, Praseetha KR\n<a href="https://imagineer.in">https://imagineer.in</a></string>

</resources>
